# gym

./: .gitignore  CMakeLists.txt  README.md  env.h  gym_.h  main.cpp  vcpkg_deps.txt
atari/: CMakeLists.txt  ale_c_wrapper.cpp  ale_c_wrapper.h  atari_env.cpp  atari_env.h  atari_env.tpp  atari_ntsc_rgb_palette.h
atari/ale/: CMakeLists.txt  ale_interface.cpp  ale_interface.hpp  version.hpp.in
atari/ale/common/: CMakeLists.txt  SoundNull.hxx  SoundSDL.cxx
atari/ale/emucore/: CMakeLists.txt  CartDPC.cxx  CartMC.hxx  DefProps.hxx  Sound.hxx  TIASnd.cxx  stella.pro
atari/ale/environment/: CMakeLists.txt
atari/ale/games/: CMakeLists.txt
atari/ale/games/supported/: CMakeLists.txt  Hangman.cpp
atari/ale/gym/envs/atari/: environment.py
box2d/: CMakeLists.txt  car_dynamics.cpp  car_dynamics.h  car_racing.cpp  car_racing.h  contact_listen.cpp  contact_listen.h  control_box2d.cpp  lunar_heuristic.cpp  lunarlandar.cpp  lunarlandar.h  utils.cpp  utils.h  utils.tpp
classic_control/: CMakeLists.txt  cartpole.cpp  cartpole.h  mountain_car.cpp  mountain_car.h
common/: CMakeLists.txt  cv_tensor_adapter.cpp  rendering.cpp  rendering.h  stacked_observation.h  tensor_adapter.cpp  tensor_adapter.h  utils.h  wrapper.h
common/normalizers/: CMakeLists.txt  running_mean_std.h
custom/: CMakeLists.txt
custom/box_world/: CMakeLists.txt  box_world.cpp  box_world.h  manual_control.cpp  random_box_world.cpp  random_box_world.h
custom/dm_lab/: CMakeLists.txt  action_mapping.h  base_lab.cpp  base_lab.h  dm_lab.cpp  dm_lab.h  dm_loader.cpp  dm_loader.h  games.h  lab.cpp  lab.h
custom/dm_lab/dm_env/: environment.h  specs.h
custom/dm_lab/lab/org_deepmind_lab/: bspc
custom/dm_lab/lab/org_deepmind_lab/baselab/: assets_bots.pk3  assets_oa.pk3  vm.pk3
custom/dm_lab/lab/org_deepmind_lab/baselab/game_scripts/common/: color_bots.lua  inventory.lua  team_colors.lua
custom/dm_lab/lab/org_deepmind_lab/baselab/game_scripts/decorators/: player_color.lua  setting_overrides.lua
custom/dm_lab/lab/org_deepmind_lab/baselab/game_scripts/factories/psychlab/: sequential_comparison_factory.lua  visual_search_factory.lua
custom/dm_lab/lab/org_deepmind_lab/baselab/game_scripts/factories/rooms/: keys_doors_puzzle_factory.lua
custom/dm_lab/lab/org_deepmind_lab/baselab/game_scripts/levels/contributed/psychlab/factories/: multiple_object_tracking_factory.lua  odd_one_out_factory.lua  what_then_where_factory.lua
custom/dm_lab/lab/org_deepmind_lab/baselab/game_scripts/levels/tests/: team_model_select.lua
custom/dm_lab/lab/org_deepmind_lab/baselab/game_scripts/map_generators/keys_doors/: gen.lua
custom/dm_lab/lab/org_deepmind_lab/levels/: language_answer_quantitative_question.lua
custom/dm_lab/lab/org_deepmind_lab/q3map2/: q3map2
custom/dm_lab/lab/public/: dmlab.h  env_c_api.h
custom/env/: enums.h
custom/minigrid/: CMakeLists.txt  common.h  grid.cpp  grid.h  manual_control.cpp  minigrid.cpp  minigrid.h  object.cpp  object.h  rendering.cpp  rendering.h  wrappers.cpp  wrappers.h
custom/minigrid/envs/: CMakeLists.txt  door_key.cpp  door_key.h  memory.cpp  memory.h  unlock.cpp  unlock.h  unlock_pickup.cpp  unlock_pickup.h
custom/procgen/: CMakeLists.txt  procgen.cpp  procgen.h
custom/procgen/src/: CMakeLists.txt  game-registry.h  game.cpp  game.h  vecgame.cpp  vecgame.h  vecoptions.h
custom/procgen/src/games/: coinrun.cpp
custom/protocol/: setup.py
custom/sc2/: CMakeLists.txt  registry.h  run_parallel.cpp  run_parallel.h
custom/sc2/env/: CMakeLists.txt  enums.h  environment.cpp  environment.h  sc2_env.cpp  sc2_env.h
custom/sc2/lib/: CMakeLists.txt  actions.cpp  actions.h  features.cpp  features.h  point.h  portspicker.cpp  portspicker.h  protocol.cpp  protocol.h  remote_controller.cpp  remote_controller.h  sc_process.cpp  sc_process.h  static_data.cpp  static_data.h  stopwatch.cpp  stopwatch.h  util.cpp  util.h
custom/sc2/maps/: CMakeLists.txt  ladder.cpp  ladder.h  lib.cpp  lib.h  melee.cpp  melee.h  mini_games.cpp  mini_games.h
custom/sc2/run_configs/: CMakeLists.txt  lib.cpp  lib.h  platforms.cpp  platforms.h
custom/sc2/s2clientprotocol/: CMakeLists.txt
custom/sc2/s2clientprotocol/proto/: raw.proto  sc2api.proto  spatial.proto
custom/sc2/test/: CMakeLists.txt  portpicker_test.cpp  protocol_error_test.cpp  random_agent_test.cpp  stopwatch_test.cpp
custom/vizdoom/: CMakeLists.txt  viz_doom.cpp  viz_doom.h
python_gym/: CMakeLists.txt  atari_wrappers.py  python_env.cpp  python_env.h  python_env.tpp
random/: CMakeLists.txt  seeding.h  sha512.cpp  sha512.h
random/mtrand/: CMakeLists.txt  helper.h  initarray.h  mtrand.cpp  mtrand.h  npy_math.h  randomkit.cpp  randomkit.h
spaces/: CMakeLists.txt  box.h  box.tpp  dict.cpp  dict.h  discrete.cpp  discrete.h  multi_discrete.cpp  multi_discrete.h  space.cpp  space.h  util.cpp  util.h  util.tpp
test/: CMakeLists.txt  atari_env.cpp  box2d.cpp  box_world.cpp  classic_control.cpp  dm_lab.cpp  procgen.cpp  py_atari_env.cpp  random.cpp  rendering.cpp  spaces.cpp  vizdoom.cpp  wrappers.cpp
tools/: CMakeLists.txt  speed_test.cpp  speed_test.h
wrappers/: CMakeLists.txt  atari_wrappers.cpp  atari_wrappers.h  clip_action.h  clip_reward.h  discretize.h  episodic_life.h  fire_reset.h  max_skip.h  monitor.h  noop_reset.h  time_limit.h  warp_frame.h
wrappers/vec_env/: CMakeLists.txt  async_env.h  base.h  gym_def.h  gym_worker.cpp  sync_env.h  updateable.h  vec_atari.cpp  vec_atari.h  vec_env_wrapper.h  vec_frame_skip.h  vec_frame_stack.cpp  vec_frame_stack.h  vec_normalize.h
