add_library(procgen
        SHARED
        assetgen.cpp
        basic-abstract-game.cpp
        cpp-utils.cpp
        entity.cpp
        game.cpp
        game-registry.cpp
        games/dodgeball.cpp
        games/bigfish.cpp
        games/bossfight.cpp
        games/caveflyer.cpp
        games/climber.cpp
        games/coinrun_old.cpp
        games/coinrun.cpp
        games/fruitbot.cpp
        games/heist.cpp
        games/jumper.cpp
        games/leaper.cpp
        games/maze.cpp
        games/miner.cpp
        games/ninja.cpp
        games/chaser.cpp
        games/plunder.cpp
        games/starpilot.cpp
        mazegen.cpp
        randgen.cpp
        roomgen.cpp
        resources.cpp
        vecgame.cpp
        vecoptions.cpp
        )